# api_virtual_shelf

./: Cargo.toml  README.md
migrations/2019-07-09-185742_create_books/: up.sql
migrations/2019-07-09-185749_create_comics/: down.sql  up.sql
migrations/2019-07-09-185755_create_mangas/: down.sql  up.sql
src/: schema.rs
